..F....... [ZBXNEXT-3807] fixed vertical scrollbar in navigation tree widget

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -4432,7 +4432,6 @@ tr.cursor-move {
 
 .navtree {
 	$max_depth: 10;
-	height: 100%;
 
 	@keyframes fadein {
 		from {opacity: 0;}
